--- a/Semana_0/cssProjetoFlexBox/index.html
+++ b/Semana_0/cssProjetoFlexBox/index.html
@@ -35,6 +35,10 @@
                 <h5>Back-End Developer</h5>
             </div>
 
+            <div onclick="displayAbout()" id="arrow">
+                <i id="animation" class="fas fa-sort-down fa-1x"></i>
+            </div>
+
             <div class="flex">
                 <div><i class="fa-brands fa-js fa-3x"></i> </div>
                 <div><i class="fa-brands fa-python fa-3x"></i> </div>
@@ -45,7 +49,7 @@
                 <div><i class="fa-solid fa-database fa-3x"></i> </div>
             </div>
             
-            <div id="about">
+            <div style="display:none;" id="about">
                 <p> Hi, I’m @PatrickFRR. <br>
                      I’m interested in everything that involves data
                      analysis and science, as well as full stack. <br>
@@ -69,6 +73,13 @@
         </section>
 
     </main>
-    
+    <script>
+        function displayAbout(){
+            var arrow=document.getElementById('animation');
+            arrow.classList.toggle('rotate');
+            var display=document.getElementById('about');
+            display.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
